package com.clt.matlink.modules.instock.mapper;

import com.clt.matlink.common.mybatis.mapper.BaseMapperPlus;
import com.clt.matlink.modules.instock.domain.entity.InStock;

public interface InStockMapper extends BaseMapperPlus<InStock, InStock> {
}
